--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="socials">
                 <span style="display:block;"><a href="https://www.twitter.com/skandaji_" target="_blank" class="socials"><i class="fab fa-twitter"></i></a></span>
                 <span style="display:none !important;"><a href="https://www.dribbble.com/undefined" target="_blank" class="socials"><i class="fab fa-dribbble"></i></a></span>
-                <span style="display:block;"><a href="https://www.linkedin.com/in/true/" target="_blank" class="socials"><i class="fab fa-linkedin-in"></i></a></span>
+                <span style="display:block;"><a href="https://www.linkedin.com/in/marouane-skandaji/" target="_blank" class="socials"><i class="fab fa-linkedin-in"></i></a></span>
                 <span style="display:none !important;"><a href="https://www.medium.com/@undefined/" target="_blank" class="socials"><i class="fab fa-medium-m"></i></a></span>
                 </div>
                 </div>
