--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div id="profile">
       <div id="profile_img" style="background: url(https://avatars.githubusercontent.com/u/41709780?v=4) center;"></div>
       <div id="username"><span style="display:block;">Marouane Skandaji</span><a href="https://github.com/marouenes">@marouenes</a></div>
-      <div id="userbio" style="display: block;">AI Enthusiast</div>
+      <div id="userbio" style="display: block;">Data-Driven AI Enthusiast</div>
       <div id="about">
-                <span style="display:block;"><i class="fas fa-users"></i> &nbsp; The Vetsbook</span>
+                <span style="display:block;"><i class="fas fa-users"></i> &nbsp; Co-Foundder @ The Vetsbook</span>
                 <span style="display:none;"><i class="fas fa-envelope"></i> &nbsp; null</span>
                 <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="http://vetsbook.net/">http://vetsbook.net/</a></span>
                 <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Budapest, Hungary</span>
