Update bio info

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <div id="username"><span style="display:block;">Marouane Skandaji</span><a href="https://github.com/marouenes">@marouenes</a></div>
       <div id="userbio" style="display: block;">AI Enthusiast</div>
       <div id="about">
-                <span style="display:block;"><i class="fas fa-users"></i> &nbsp; Co-Founder @ Vetsbook</span>
+                <span style="display:block;"><i class="fas fa-users"></i> &nbsp; Data Engineer @ Ericssson</span>
                 <span style="display:none;"><i class="fas fa-envelope"></i> &nbsp; null</span>
-                <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="http://vetsbook.net/">http://vetsbook.net/</a></span>
+                <span style="display:none;"><i class="fas fa-link"></i> &nbsp; <a href=""></a></span>
                 <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Budapest, Hungary</span>
                 <span style="display:none;"><i class="fas fa-user-tie"></i> &nbsp;&nbsp; Available for hire</span>
                 <div class="socials">
@@ -49,6 +49,19 @@
                             </div>
                         </section>
                         </a>
+                        <a href="https://github.com/marouenes/marouenes" target="_blank">
+                        <section>
+                            <div class="section_title">marouenes</div>
+                            <div class="about_section">
+                            <span style="display:block;">Marouane's little bio</span>
+                            </div>
+                            <div class="bottom_section">
+                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
+                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
+                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                            </div>
+                        </section>
+                        </a>
                         <a href="https://github.com/marouenes/marouenes.github.io" target="_blank">
                         <section>
                             <div class="section_title">marouenes.github.io</div>
@@ -57,6 +70,32 @@
                             </div>
                             <div class="bottom_section">
                                 <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; HTML</span>
+                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
+                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                            </div>
+                        </section>
+                        </a>
+                        <a href="https://github.com/marouenes/Pyspark-best-practices" target="_blank">
+                        <section>
+                            <div class="section_title">Pyspark-best-practices</div>
+                            <div class="about_section">
+                            <span style="display:block;">This a simple intuitive code base structure and workflow for running spark jobs on your standalone application.</span>
+                            </div>
+                            <div class="bottom_section">
+                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; Python</span>
+                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
+                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                            </div>
+                        </section>
+                        </a>
+                        <a href="https://github.com/marouenes/pyspark-tdd" target="_blank">
+                        <section>
+                            <div class="section_title">pyspark-tdd</div>
+                            <div class="about_section">
+                            <span style="display:none;">undefined</span>
+                            </div>
+                            <div class="bottom_section">
+                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; Python</span>
                                 <span><i class="fas fa-star"></i>&nbsp; 0</span>
                                 <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                             </div>
@@ -105,24 +144,11 @@
                             </div>
                         </section>
                         </a>
-                        <a href="https://github.com/marouenes/Basic-Python-Neural-Netwokrs" target="_blank">
+                        <a href="https://github.com/marouenes/c-ray" target="_blank">
                         <section>
-                            <div class="section_title">Basic-Python-Neural-Netwokrs</div>
+                            <div class="section_title">c-ray</div>
                             <div class="about_section">
-                            <span style="display:block;">This is the code that is discussed in the 4th Neural Networks video (python implementation).</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                            </div>
-                        </section>
-                        </a>
-                        <a href="https://github.com/marouenes/dive-into-machine-learning" target="_blank">
-                        <section>
-                            <div class="section_title">dive-into-machine-learning</div>
-                            <div class="about_section">
-                            <span style="display:block;">Dive into Machine Learning with Python Jupyter notebook and scikit-learn!</span>
+                            <span style="display:block;">c-ray is a small, simple path tracer written in C</span>
                             </div>
                             <div class="bottom_section">
                                 <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
@@ -157,6 +183,19 @@
                             </div>
                         </section>
                         </a>
+                        <a href="https://github.com/marouenes/fullstack-nanodegree-vm" target="_blank">
+                        <section>
+                            <div class="section_title">fullstack-nanodegree-vm</div>
+                            <div class="about_section">
+                            <span style="display:none;">undefined</span>
+                            </div>
+                            <div class="bottom_section">
+                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
+                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
+                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                            </div>
+                        </section>
+                        </a>
                         <a href="https://github.com/marouenes/gitfolio" target="_blank">
                         <section>
                             <div class="section_title">gitfolio</div>
@@ -183,45 +222,6 @@
                             </div>
                         </section>
                         </a>
-                        <a href="https://github.com/marouenes/Gogh" target="_blank">
-                        <section>
-                            <div class="section_title">Gogh</div>
-                            <div class="about_section">
-                            <span style="display:block;">Color Scheme for Gnome Terminal and Pantheon Terminal</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                            </div>
-                        </section>
-                        </a>
-                        <a href="https://github.com/marouenes/handson-ml" target="_blank">
-                        <section>
-                            <div class="section_title">handson-ml</div>
-                            <div class="about_section">
-                            <span style="display:block;">A series of Jupyter notebooks that walk you through the fundamentals of Machine Learning and Deep Learning in python using Scikit-Learn and TensorFlow.</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                            </div>
-                        </section>
-                        </a>
-                        <a href="https://github.com/marouenes/homemade-machine-learning" target="_blank">
-                        <section>
-                            <div class="section_title">homemade-machine-learning</div>
-                            <div class="about_section">
-                            <span style="display:block;">🤖 Python examples of popular machine learning algorithms with interactive Jupyter demos and math being explained</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                            </div>
-                        </section>
-                        </a>
                         <a href="https://github.com/marouenes/Image_Segmentation" target="_blank">
                         <section>
                             <div class="section_title">Image_Segmentation</div>
@@ -235,24 +235,11 @@
                             </div>
                         </section>
                         </a>
-                        <a href="https://github.com/marouenes/materials" target="_blank">
+                        <a href="https://github.com/marouenes/kubernetes-mlops" target="_blank">
                         <section>
-                            <div class="section_title">materials</div>
+                            <div class="section_title">kubernetes-mlops</div>
                             <div class="about_section">
-                            <span style="display:block;">Bonus materials, exercises, and example projects for our Python tutorials</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                            </div>
-                        </section>
-                        </a>
-                        <a href="https://github.com/marouenes/models" target="_blank">
-                        <section>
-                            <div class="section_title">models</div>
-                            <div class="about_section">
-                            <span style="display:block;">Models and examples built with TensorFlow</span>
+                            <span style="display:block;">MLOps tutorial using Python, Docker and Kubernetes.</span>
                             </div>
                             <div class="bottom_section">
                                 <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
@@ -300,6 +287,19 @@
                             </div>
                         </section>
                         </a>
+                        <a href="https://github.com/marouenes/PocketManager" target="_blank">
+                        <section>
+                            <div class="section_title">PocketManager</div>
+                            <div class="about_section">
+                            <span style="display:block;">An OOP python university project which uses YAML for configuration, GUI, JSON, and other libraries.</span>
+                            </div>
+                            <div class="bottom_section">
+                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; Python</span>
+                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
+                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                            </div>
+                        </section>
+                        </a>
                         <a href="https://github.com/marouenes/Probabilistic-Programming-and-Bayesian-Methods-for-Hackers" target="_blank">
                         <section>
                             <div class="section_title">Probabilistic-Programming-and-Bayesian-Methods-for-Hackers</div>
@@ -313,24 +313,11 @@
                             </div>
                         </section>
                         </a>
-                        <a href="https://github.com/marouenes/PythonDataScienceHandbook" target="_blank">
+                        <a href="https://github.com/marouenes/pyspark-example-project" target="_blank">
                         <section>
-                            <div class="section_title">PythonDataScienceHandbook</div>
+                            <div class="section_title">pyspark-example-project</div>
                             <div class="about_section">
-                            <span style="display:block;">Python Data Science Handbook: full text in Jupyter Notebooks</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                            </div>
-                        </section>
-                        </a>
-                        <a href="https://github.com/marouenes/pytorch" target="_blank">
-                        <section>
-                            <div class="section_title">pytorch</div>
-                            <div class="about_section">
-                            <span style="display:block;">Tensors and Dynamic neural networks in Python with strong GPU acceleration</span>
+                            <span style="display:block;">Example project implementing best practices for PySpark ETL jobs and applications.</span>
                             </div>
                             <div class="bottom_section">
                                 <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
@@ -344,19 +331,6 @@
                             <div class="section_title">tinygrad</div>
                             <div class="about_section">
                             <span style="display:block;">You like pytorch? You like micrograd? You love tinygrad! ❤️ </span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                            </div>
-                        </section>
-                        </a>
-                        <a href="https://github.com/marouenes/transformers" target="_blank">
-                        <section>
-                            <div class="section_title">transformers</div>
-                            <div class="about_section">
-                            <span style="display:block;">🤗Transformers: State-of-the-art Natural Language Processing for Pytorch and TensorFlow 2.0.</span>
                             </div>
                             <div class="bottom_section">
                                 <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
