--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       <div id="username"><span style="display:block;">Marouane Skandaji</span><a href="https://github.com/marouenes">@marouenes</a></div>
       <div id="userbio" style="display: block;">AI Enthusiast</div>
       <div id="about">
-                <span style="display:block;"><i class="fas fa-users"></i> &nbsp; Data Engineer @ Ericssson</span>
+                <span style="display:block;"><i class="fas fa-users"></i> &nbsp; Big Data Engineer @ Ericssson</span>
                 <span style="display:none;"><i class="fas fa-envelope"></i> &nbsp; null</span>
                 <span style="display:none;"><i class="fas fa-link"></i> &nbsp; <a href=""></a></span>
                 <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Budapest, Hungary</span>
                 <span style="display:none;"><i class="fas fa-user-tie"></i> &nbsp;&nbsp; Available for hire</span>
                 <div class="socials">
-                <span style="display:block;"><a href="https://www.twitter.com/skandaji_" target="_blank" class="socials"><i class="fab fa-twitter"></i></a></span>
+                <span style="display:none !important;"><a href="https://www.twitter.com/undefined" target="_blank" class="socials"><i class="fab fa-twitter"></i></a></span>
                 <span style="display:none !important;"><a href="https://www.dribbble.com/undefined" target="_blank" class="socials"><i class="fab fa-dribbble"></i></a></span>
                 <span style="display:block;"><a href="https://www.linkedin.com/in/marouane-skandaji/" target="_blank" class="socials"><i class="fab fa-linkedin-in"></i></a></span>
                 <span style="display:none !important;"><a href="https://www.medium.com/@undefined/" target="_blank" class="socials"><i class="fab fa-medium-m"></i></a></span>
@@ -36,6 +36,19 @@
       <div id="work">
         <h1>Work.</h1>
         <div class="projects" id="work_section">
+                        <a href="https://github.com/marouenes/configurations" target="_blank">
+                        <section>
+                            <div class="section_title">configurations</div>
+                            <div class="about_section">
+                            <span style="display:block;">This is my environment, feel free to have a look!</span>
+                            </div>
+                            <div class="bottom_section">
+                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; Shell</span>
+                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
+                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                            </div>
+                        </section>
+                        </a>
                         <a href="https://github.com/marouenes/dice-game" target="_blank">
                         <section>
                             <div class="section_title">dice-game</div>
@@ -92,7 +105,7 @@
                         <section>
                             <div class="section_title">pyspark-tdd</div>
                             <div class="about_section">
-                            <span style="display:none;">undefined</span>
+                            <span style="display:block;">Test Driven Development with Pyspark</span>
                             </div>
                             <div class="bottom_section">
                                 <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; Python</span>
@@ -118,11 +131,11 @@
       <div id="forks" style="display: block;">
         <h1>Forks.</h1>
         <div class="projects" id="forks_section">
-                        <a href="https://github.com/marouenes/100-Days-Of-ML-Code" target="_blank">
+                        <a href="https://github.com/marouenes/kubernetes-mlops" target="_blank">
                         <section>
-                            <div class="section_title">100-Days-Of-ML-Code</div>
+                            <div class="section_title">kubernetes-mlops</div>
                             <div class="about_section">
-                            <span style="display:block;">100-Days-Of-ML-Code中文版</span>
+                            <span style="display:block;">MLOps tutorial using Python, Docker and Kubernetes.</span>
                             </div>
                             <div class="bottom_section">
                                 <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
@@ -131,11 +144,11 @@
                             </div>
                         </section>
                         </a>
-                        <a href="https://github.com/marouenes/albumentations" target="_blank">
+                        <a href="https://github.com/marouenes/100-Days-Of-ML-Code" target="_blank">
                         <section>
-                            <div class="section_title">albumentations</div>
+                            <div class="section_title">100-Days-Of-ML-Code</div>
                             <div class="about_section">
-                            <span style="display:block;">Fast image augmentation library and easy to use wrapper around other libraries. Documentation:  https://albumentations.ai/docs/ Paper about library: https://www.mdpi.com/2078-2489/11/2/125</span>
+                            <span style="display:block;">100-Days-Of-ML-Code中文版</span>
                             </div>
                             <div class="bottom_section">
                                 <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
@@ -152,6 +165,19 @@
                             </div>
                             <div class="bottom_section">
                                 <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
+                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
+                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                            </div>
+                        </section>
+                        </a>
+                        <a href="https://github.com/marouenes/crypto-view" target="_blank">
+                        <section>
+                            <div class="section_title">crypto-view</div>
+                            <div class="about_section">
+                            <span style="display:none;">undefined</span>
+                            </div>
+                            <div class="bottom_section">
+                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; JavaScript</span>
                                 <span><i class="fas fa-star"></i>&nbsp; 0</span>
                                 <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                             </div>
@@ -235,11 +261,11 @@
                             </div>
                         </section>
                         </a>
-                        <a href="https://github.com/marouenes/kubernetes-mlops" target="_blank">
+                        <a href="https://github.com/marouenes/albumentations" target="_blank">
                         <section>
-                            <div class="section_title">kubernetes-mlops</div>
+                            <div class="section_title">albumentations</div>
                             <div class="about_section">
-                            <span style="display:block;">MLOps tutorial using Python, Docker and Kubernetes.</span>
+                            <span style="display:block;">Fast image augmentation library and easy to use wrapper around other libraries. Documentation:  https://albumentations.ai/docs/ Paper about library: https://www.mdpi.com/2078-2489/11/2/125</span>
                             </div>
                             <div class="bottom_section">
                                 <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
@@ -320,7 +346,7 @@
                             <span style="display:block;">Example project implementing best practices for PySpark ETL jobs and applications.</span>
                             </div>
                             <div class="bottom_section">
-                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
+                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; Python</span>
                                 <span><i class="fas fa-star"></i>&nbsp; 0</span>
                                 <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                             </div>
@@ -345,7 +371,7 @@
         <div id="blogs"></div>
       </div>
       <div id="footer">
-        <a href="https://github.com/imfunniee" target="_blank">made on earth by a human</a>
+        <a href="https://github.com/marouenes" target="_blank">made on earth by a human</a>
       </div>
     </div>
     <script type="text/javascript">
@@ -410,6 +436,6 @@
         magicForksGrid.listen();
       });
     </script>
-  
+
 
 </body></html>
